[fix] corection des tests backend suite au modification et adaptation pour mobile de la page profil et home